--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ if(PXD_BUILD_TEST)
     set(PXD_TEST_SOURCE_FILES
         ${PXD_TEST_SOURCE_DIR}/malloc_tests.cpp
         ${PXD_TEST_SOURCE_DIR}/calloc_tests.cpp
+        ${PXD_TEST_SOURCE_DIR}/free_tests.cpp
 
         ${PXD_SOURCE_FILES}
     )
